src/test/ui/union/union-deref.stderr
error: not automatically applying `DerefMut` on union field
  --> $DIR/union-deref.rs:14:14
   |
LL |     unsafe { u.f.0 = Vec::new() };
   |              ^^^
   |
   = help: writing to this field calls the destructor for the old value
   = help: add an explicit `*` if that is desired, or call `ptr::write` to not run the destructor

error: not automatically applying `DerefMut` on union field
  --> $DIR/union-deref.rs:18:14
   |
LL |     unsafe { u.f.0.0 = Vec::new() };
   |              ^^^^^^^
   |
   = help: writing to this field calls the destructor for the old value
   = help: add an explicit `*` if that is desired, or call `ptr::write` to not run the destructor

error: aborting due to 2 previous errors

